--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
     "lucide-react": "^0.536.0",
+    "rc-slider": "^11.1.8",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.0",
